--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,42 @@
+body {
+  background-color: rgb(116, 116, 116);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+}
+
 div {
-  border: 1px solid black;
-  min-height: 50px;
-  min-width: 50px;
-  margin: auto;
+  background-color: white;
+  flex: 1;
 }
 
 #container {
   display: flex;
   flex-direction: column;
+  width: 500px;
+  height: 500px;
+}
+
+.btn-container {
+  background-color: rgb(97, 97, 97);
+  display: flex;
+  justify-content: center;
+}
+
+button {
+  min-width: 100px;
+  font-size: 50px;
 }
 
 .row {
   display: flex;
 }
+
+.filled-in {
+  background-color: black;
+}
+
+/* div:hover {
+  background-color: rgb(189, 189, 189);
+} */
